[gd_scene load_steps=3 format=3 uid="uid://xwrlnq5s5gin"]

[ext_resource type="Script" path="res://TrackMetadataUI.gd" id="1_60hnn"]
[ext_resource type="Theme" uid="uid://bnulg8akvjth4" path="res://DarkTheme/Dark.theme" id="1_uslow"]

[node name="TrackMetadataUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uslow")
script = ExtResource("1_60hnn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -199.0
offset_right = 163.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 6.0
offset_right = 23.0
offset_bottom = 32.0
grow_horizontal = 2
scale = Vector2(1.64, 1.64)
text = "Track Properties"

[node name="HSeparator" type="HSeparator" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 43.0
offset_right = 319.0
offset_bottom = 63.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 63.0
offset_right = 98.0
offset_bottom = 89.0
text = "Track Name"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 89.0
offset_right = 319.0
offset_bottom = 120.0

[node name="TrackName" type="LineEdit" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveTrackNameButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 134.0
offset_right = 319.0
offset_bottom = 165.0

[node name="Label3" type="Label" parent="Panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number Of Laps"

[node name="LapCount" type="SpinBox" parent="Panel/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 3.0
alignment = 1

[node name="SaveLapCountButton" type="Button" parent="Panel/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 152.0
offset_right = 20.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="ApplyButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"

[node name="CloseButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close
"
